kubernetes/deploymenthello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-hello-app
  labels:
    app: flask-hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-hello-app
  template:
    metadata:
      labels:
        app: flask-hello-app
    spec:
      containers:
      - name: flask-hello-app
        image: pratikkorat/flask-hello-app:latest
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: flask-hello-app-service
  labels:
    app: flask-hello-app
spec:
  type: ClusterIP # This is the default, a virtual IP address will be allocated
  selector:
    # This is how the Service will find the Pods
    app: flask-hello-app
  ports:
    - name: web
      protocol: TCP
      port: 80 # The port exposed by the service
      targetPort: 5000 # The port or port name of the Pod
